k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-ticketing-backend
  labels:
    app.kubernetes.io/part-of: ticketing
    app.kubernetes.io/managed-by: kustomize
