k8s/base/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  labels:
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: ticketing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: payment-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
